fix: fix thumb vetical alignment on chrome

--- a/src/components/slider/Slider.module.scss
+++ b/src/components/slider/Slider.module.scss
@@ -84,7 +84,7 @@
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
       @include thumb;
-      margin-top: 0px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+      margin-top: -8px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
     }
 
     /* All the same for Firefox and IE */
